--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-hash",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://j0se-luiz.github.io/react-hash/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -18,6 +19,7 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "deploy":"npm run build && cd node_modules && cd .bin && gh-pages -d ../../build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
