--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-hash",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://j0se-luiz.github.io/react-hash/",
+  "homepage": "https://Luiz-Sant0s.github.io/react-hash/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -11,6 +11,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "gh-pages": "^5.0.0",
     "nes.css": "^2.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
